--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,9 @@ h1 {
     justify-content: center;
     max-width: 1000px; 
     margin: 0 auto; 
-    gap: 20px; 
+    gap: 20px;  
 }
+
 .project-card {
     background-color: #fff;
     border-radius: 8px;
@@ -27,39 +28,56 @@ h1 {
     min-width: 450px;
     margin-bottom: 20px; 
     text-align: center;
+    box-sizing: border-box; 
 }
 .project-card img {
     width: 100%;
     height: auto;
     border-radius: 4px;
 }
+
 .project-card h2 {
     color: #333;
     margin-top: 0;
 }
 .project-card p {
     color: #666;
+    padding: 10px;
+    box-sizing: border-box;
 }
 .project-card a {
     color: #007bff;
     text-decoration: none;
     display: inline-block; 
     margin-top: 10px; 
+    padding: 10px; 
 }
 .project-card a:hover {
     text-decoration: underline;
 }
 @media (max-width: 768px) {
     .project-card {
-        width: calc(50% - 40px);
+        width: calc(50% - 20px); 
     }
 }
+
 @media (max-width: 480px) {
     .project-card {
-        width: 100%;
+        width: calc(50% - 20px);
+        margin: 0 auto; 
+    }
+
+    .project-card p {
+        padding-left: 30px; 
+        padding-right: 30px; 
     }
 }
 
 .project-card:last-child {
-    margin-top: 20px; 
+    margin-top: 20px;
+}
+
+body, html {
+    margin: 0; 
+    overflow-x: hidden; 
 }
